<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dieggnostics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stand_next">Next</string>
    <string name="stand_auto_submit">Submit</string>
    <string name="stand_auto_totes">Totes</string>
    <string name="stand_auto_new">New</string>
    <string name="stand_auto_old">Old</string>
    <string name="stand_auto_close">Close</string>
    <string name="stand_auto_far">Far</string>
    <string name="stand_auto_cooperatition">Coopertition</string>
    <string name="stand_auto_undo">Undo</string>
    <string name="stand_auto_redo">Redo</string>
	<string name="stand_auto_litter">Litter</string>
	<string name="stand_auto_containers">Containers</string>
	<string name="stand_auto_container">Container</string>
	<string name="stand_auto_landfill">Landfill</string>
	<string name="stand_auto_other_side">Other Side</string>
	<string name="stand_auto_tipped">Tipped</string>
	<string name="stand_auto_collected">Collected</string>
	<string name="stand_auto_0">0</string>
	<string name="stand_auto_1">1</string>
	<string name="stand_auto_2">2</string>
	<string name="stand_auto_3">3</string>
	<string name="stand_auto_4">4</string>
	<string name="stand_auto_errors">Errors</string>
	<string name="stand_auto_auto">Auto</string>
	<string name="stand_auto_tele">Tele</string>
	<string name="stand_auto_final">Final</string>
	<string name="stand_auto_plus">+</string>
	<string name="stand_auto_minus">-</string>
	<string name="stand_auto_notes">Notes</string>
	<string name="stand_auto_made_autozone">Made Autozone?</string>
	<string name="stand_auto_stacked_totes">Stacked Totes?</string>
	<string name="stand_auto_ended_autozone">Ended in Autozone?</string>
	<string name="stand_login_login">Login</string>
	<string name="stand_login_enter_id">Enter your ID:</string>
	<string name="stand_login_default_name">John Doe</string>
	<string name="stand_final_question1">Can this robot pick up knocked over containers?</string>
 	<string name="stand_final_question2">Was the robot able to collect or remove totes from enclosed spaces?</string>
 	<string name="stand_final_question3">Was the robot able to drive over the scoring platforms?</string>
 	<string name="stand_final_question4">Did this robot or team receive a foul?</string>
 	<string name="stand_final_question5">Data compromised?</string> 
	<string name="stand_final_result_well">Well</string>
	<string name="stand_final_result_poorly">Poorly</string>
	<string name="stand_final_result_tried_and_failed">Tried and failed</string>
	<string name="stand_final_result_did_not_attempt">Did not attempt</string>
	<string name="stand_final_result_unsure">Unsure</string>
	<string name="stand_final_result_multiple">Multiple</string>
	<string name="stand_final_result_one">One</string>
	<string name="stand_final_result_none">None</string>
	<string name="stand_final_result_no">No</string>
	<string name="stand_final_result_no_show">No show</string>
	<string name="stand_final_result_dead">Dead</string>
	<string name="stand_final_result_broke_down">Broke down</string>
	<string name="stand_final_result_hindered">Hindered by alliance</string>
	<string name="stand_submit_success">The data has been submitted. Thank you!</string>
	<string name="stand_submit_return">Return to login screen</string>
	<string name="stand_auto_c">C</string>
	<string name="stand_auto_t">T</string>
	<string name="stand_auto_explanation">Container | Tote - T/C = not in zone, On = in auto zone</string>
	<string name="stand_auto_done">Done</string>
	<string name="stand_tele_step">Containers removed from step</string>
	<string name="stand_tele_errora">Stacks knocked over</string>
	<string name="stand_tele_errorb">Containers knocked over</string>
	<string name="stand_tele_errord">Interfered w/ another robot</string>
</resources>
